<resources>
    <string name="menu_button">MenuButton</string>
    <string name="menu_option_logout">Logout</string>
    <string name="menu_option_export_calendar">Export Calendar</string>
    <string name="open_month_calendar_button">Month overview</string>
    <string name="monday_label">Mo</string>
    <string name="tuesday_label">Tu</string>
    <string name="wednesday_label">We</string>
    <string name="thursday_label">Th</string>
    <string name="friday_label">Fr</string>
    <string name="saturday_label">Sa</string>
    <string name="sunday_label">Su</string>
    <string name="app_name">WebUntisApp</string>
    <string name="monday_button">1</string>
    <string name="tuesday_button">2</string>
    <string name="wednesday_button">3</string>
    <string name="thursday_button">4</string>
    <string name="friday_button">5</string>
    <string name="saturday_button">6</string>
    <string name="sunday_button">7</string>
    <string name="date">Tuesday, 06.06.2017</string>
    <string name="filter_and_field_of_study">Text</string>
    <string name="hour00">00:00</string>
    <string name="hour01">01:00</string>
    <string name="hour02">02:00</string>
    <string name="hour03">03:00</string>
    <string name="hour04">04:00</string>
    <string name="hour05">05:00</string>
    <string name="hour06">06:00</string>
    <string name="hour07">07:00</string>
    <string name="hour08">08:00</string>
    <string name="hour09">09:00</string>
    <string name="hour10">10:00</string>
    <string name="hour11">11:00</string>
    <string name="hour12">12:00</string>
    <string name="hour13">13:00</string>
    <string name="hour14">14:00</string>
    <string name="hour15">15:00</string>
    <string name="hour16">16:00</string>
    <string name="hour17">17:00</string>
    <string name="hour18">18:00</string>
    <string name="hour19">19:00</string>
    <string name="hour20">20:00</string>
    <string name="hour21">21:00</string>
    <string name="hour22">22:00</string>
    <string name="hour23">23:00</string>
    <string name="hour24">00:00</string>
    <string name="Personal_calenar">Personal Calendar</string>
    <string name="Global_Calendar">Global calendar</string>
    <string-array name="menu_items">
        <item name="menu_personal_calendar">Personal Calendar</item>
        <item name="menu_global_calendar">Global Calendar</item>
        <item name="logout">Logout</item>
    </string-array>
</resources>