<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/lightgray"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:ignore="InefficientWeight,ContentDescription" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/addEvent"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginEnd="145dp"
            android:background="@drawable/plus" />

        <Button
            android:id="@+id/settings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="145dp"
            android:background="@drawable/menu" />


    </LinearLayout>
    <TextView
        android:id="@+id/currentMonth"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/dark">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/prevMonth"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_marginEnd="170sp"
            android:adjustViewBounds="true"
            android:background="@drawable/left_arrow">

        </ImageView>
        <ImageView
            android:id="@+id/nextMonth"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_marginStart="140sp"
            android:adjustViewBounds="true"
            android:src="@drawable/right_arrow">

        </ImageView>

    </LinearLayout>
    <Button
        android:id="@+id/selectedDayMonthYear"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/dark" />


    <LinearLayout
        android:id="@+id/calendarheader"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/sunday_label"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/monday_label"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/tuesday_label"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/wednesday_label"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/thursday_label"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/friday_label"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/saturday_label"/>
    </LinearLayout>


    <GridView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="7">

    </GridView>


</LinearLayout>